--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "prop-types": "^15.6.1",
     "react": "^16.3.2",
     "react-dom": "^16.3.2",
+    "react-popup": "^0.9.2",
     "react-scripts": "1.1.4",
     "reactstrap": "^5.0.0"
   },
@@ -21,6 +22,7 @@
     "eslint-plugin-import": "^2.11.0",
     "eslint-plugin-jsx-a11y": "^6.0.3",
     "eslint-plugin-prettier": "^2.6.0",
-    "eslint-plugin-react": "^7.7.0"
+    "eslint-plugin-react": "^7.7.0",
+    "stylelint-no-unsupported-browser-features": "^3.0.0"
   }
 }
