--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "listing-exercise",
   "version": "0.1.0",
+  "homepage": "https://dery96.github.io/listing-exercise/",
   "private": true,
   "dependencies": {
     "bootstrap": "^4.0.0",
